benchamrks adjustments